--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,3 +1,5 @@
+@import url('../../utils/variables.css');
+
 .preloader {
   display: flex;
   justify-content: center;
@@ -9,10 +11,11 @@
 .preloader__spinner {
   width: 50px;
   height: 50px;
-  border: 4px solid rgba(0, 0, 0, 0.1);
+  border: 4px solid var(--color-beige);
   border-radius: 50%;
-  border-top-color: #333;
+  border-top-color: var(--color-coffeeBrown);
   animation: spin 1s ease-in-out infinite;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 @keyframes spin {
